--- a/register.css
+++ b/register.css
@@ -101,3 +101,9 @@ button:hover {
   font-size: 13px;
   margin-bottom: 10px;
 }
+@media (max-width: 480px) {
+  .auth-container {
+    margin: 15px;
+    padding: 25px;
+  }
+}
